2003-02-25  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/getserv.c: Added a servent structure for SNTP.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/net.cdl: Improve doc links.

	* doc/prepare-manpages.sh: Generate namespaced IDs, without shouting.
	* doc/tcpip-manpages.sgml: Regenerated.

2003-01-31  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/net.cdl (CYGPKG_NET_BUILD_HW_TESTS): Requires eth hardware
	devices.
	(CYGPKG_NET_TESTS): Remove from under CYGPKG_NET_BUILD_TESTS (which
	became CYGPKG_NET_BUILD_HW_TESTS) so the loopback tests are always
	built.

2003-01-20  Gary Thomas  <gary@mlbassoc.com>

	* tests/nc_test_slave.c: Improve handling of UDP buffer space - try
	to minimize amount of "idle" time when this occurs.  Since this test
	is just for show, these changes just make the numbers "look" better.

2003-01-18  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/network_support.c (init_all_network_interfaces): Define buf
	as const.

2003-01-10  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/network_support.c (init_all_network_interfaces): Added
	support for a hard coded domain name. Inspired by Motoya Kurotsu.
	 
2003-01-09  Andrew Lunn  <andrew.lunn@ascom.ch>

	* src/network_support.c (init_all_network_interfaces): Added
	support for a hard coded, default DNS server address.

2003-01-12  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/bootp_support.c: Fix licence which should always have been
	GPL since no BSD licensed code was in fact involved.
	* src/dhcp_prot.c: Ditto.
	* src/dhcp_support.c: Ditto.
	* src/network_support.c: Ditto.
	* src/tftp_client.c: Ditto.
	* src/tftp_dummy_file.c: Ditto.
	* src/tftp_server.c: Ditto.

2003-01-04  Jonathan Larmour  <jifl@eCosCentric.com>

	* doc/tcpip.sgml: Use new entity name for tcpip manpages.

2002-10-06  Andrew Lunn  <andrew.lunn@ascom.ch>

	* tests/multi_lo_select.c: Need the io_fileio.h header file
	* tests/tcp_echo.c: (max): definition clashes with the one in